# SpessaSynth

./: .directory  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  NOTICE  Open SpessaSynth.bat  README.md  eslint.config.js  index.html  local_edition_index.html  midi.js  minify_website.sh  package-lock.json  package.json  server.js  server.py  start.bat  style.css  tsconfig.json  vite.config.js
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yaml  question.yml
.github/workflows/: deploy.yml  jekyll-gh-pages.yml  release.yml
demo_songs/: CREDITS.md  Hybrid song 2_20.rmi  Unreeeal superhero 3.rmi
docs/: index.html
docs/examples/: advanced_demo.html  advanced_demo.js  offline_audio.html  offline_audio.js  simple_demo.html  simple_demo.js  visualizer.html  visualizer.js
examples/: advanced.js  advanced_demo.html  advanced_demo.js  examples.css  main.js  offline_audio.html  offline_audio.js  piano.html  piano.js  simple_demo.html  simple_demo.js  visualizer.html  visualizer.js
js/midi_parser/: midi_message.js  track_loader_worker.js
js/midi_parser/events/: midi_event.js
js/midi_player/notes/: buffer_note.js
js/midi_visualizer/: midi_manager.js  midi_renderer.js
js/soundfont2_parser/: soundfont_parser.js
js/soundfont2_parser/chunk/: zones.js
midi_parser/: midi_parser.js
midi_parser/events/: meta_event.js  sysex_event.js
midi_player/: midi_synthetizer.js
midi_player/notes/: buffer_note.js  preset_note_modifiers.js
midi_visualizer/: midi_keyboard.js
soundfont2_parser/: soundfont_loader_worker.js
soundfont2_parser/chunk/: modulators.js  presets.js  riff_chunk.js
soundfonts/: .gitignore
src/: README.md  index.html
src/css/: keyboard.css  keyboard_ui.css  sequencer_ui.css  style.css  synthesizer_ui.css
src/js/: main.js  manager.js  midi.js  midi_manager.js
src/js/midi_parser/: midi_channel.js  midi_loader.js  midi_message.js  midi_parser.js
src/js/midi_visualizer/: midi_keyboard.js  midi_renderer.js
src/js/soundfont/: soundfont_parser.js
src/js/ui/: icons.js  midi_keyboard.js  (+4 more)
src/server/: auto_update.ts  config_management.ts  saved_settings.ts  serve.ts  server.ts  server_utils.ts
src/spessasynth_lib/: LICENSE  README.md
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/: .gitignore  CMakeLists.txt  README.md  build_command.sh  build_command_release.sh  cpessasynth.js  cpessasynth.wasm  extern_c.h  main  main.cpp  main.h  main.wasm  test.cpp
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/: CppessaSynth.cpp  CppessaSynth.h  constants.h  generatorTypes.h  midiControllers.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/channel/: Channel.cpp  Channel.h  ChannelVibrato.cpp  ChannelVibrato.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/channel_manager/: ChannelManager.cpp  ChannelManager.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/low_frequency_oscillator/: LowFrequencyOscillator.cpp  LowFrequencyOscillator.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/lowpass_filter/: LowpassFilter.cpp  LowpassFilter.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/modulation_envelope/: ModulationEnvelope.cpp  ModulationEnvelope.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/modulator/: Modulator.cpp  Modulator.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/sample_dump_manager/: DumpedSample.cpp  DumpedSample.h  SampleDumpManager.cpp  SampleDumpManager.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/stereo_panner/: StereoPanner.cpp  StereoPanner.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/unit_converter/: UnitConverter.cpp  UnitConverter.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/voice/: Voice.cpp  Voice.h  VoiceSample.cpp  VoiceSample.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/volumeEnvelope/: VolumeEnvelope.cpp  VolumeEnvelope.h
src/spessasynth_lib/synthetizer/worklet_system/cppessa_synth/cpessasynth_components/wavetable_oscillator/: WavetableOscillator.cpp  WavetableOscillator.h
src/website/: CHANGELOG.js  CHANGELOG.ts  README.md  buffer_to_wav.js  changelog.ts  demo_index.html  demo_main.js  dls_to_sf2_converter.html  index.html  local_edition_index.html  local_main.js  main.js  manager.js  manifest.json  minify_processor.sh  minify_website.sh  server.js
utils/: byte_functions.js  shiftable_array.js  text_formatting.js
(+892 files in other folders)
